--- a/index.css
+++ b/index.css
@@ -21,11 +21,13 @@ body{
 }
 
 h1{
-    font-family: 'url(my_chemical_romance.ttf)';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 50px;
     color: rgb(197, 0, 0);
     text-align: center;
 }
+
+
 
 h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
