--- a/index.css
+++ b/index.css
@@ -1,8 +1,29 @@
+@font-face {
+    font-family: 'MinhaFonte';
+    src: url('my_chemical_romance.ttf') format('truetype');
+}
+
+img {
+    display: block;
+    margin-left: left;
+}
+
+.conteudo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    min-height: 180px;
+    padding: 16px;
+    border: 1px solid #ddd;
+    background: #fafafa;
+}
+
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     font-size: 20px;
     color: rgb(197, 0, 0);
-
+    font-family: 'MinhaFonte', sans-serif;
     background-image: url('BaVdUv.png');
     background-repeat: no-repeat;
     background-size:50%;
@@ -21,7 +42,7 @@ body{
 }
 
 h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'MinhaFonte', sans-serif;
     font-size: 50px;
     color: rgb(197, 0, 0);
     text-align: center;
@@ -30,17 +51,24 @@ h1{
 
 
 h2{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'MinhaFonte', sans-serif;
     font-size: 40px;
     color: rgb(197, 0, 0);
     text-align: left;
 }
 
 h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'MinhaFonte', sans-serif;
     font-size: 25px;
     color: rgb(114, 2, 2);
     text-align: justify;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+h4{
+    font-family: 'MinhaFonte', sans-serif;
+    font-size: 15px;
+    color: rgb(114, 2, 2);
+    text-align: left;
 }
