--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@
 img {
     display: block;
     margin-left: left;
+    margin-right: auto;
+    width: 150px;
+
+
 }
 
 .conteudo {
@@ -72,4 +76,16 @@ h4{
     font-size: 15px;
     color: rgb(114, 2, 2);
     text-align: left;
+}
+
+
+
+a {
+    display: block;
+    font-family: 'MinhaFonte', sans-serif;
+    font-size: 25px;
+    color: rgb(114, 2, 2);
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
 }
